--- a/leeds_virtual_museums/static/css/common.css
+++ b/leeds_virtual_museums/static/css/common.css
@@ -2,11 +2,14 @@
 html, body {
     height: 100%;
     min-height: 100%;
+    font-size: 120%;
 }
 
 #main-div {
     min-height: 100%;
     margin-top: 70px;
+    font-family: serif;
+    background-color: #A2AD9A;
 }
 
 .footer {
@@ -34,17 +37,19 @@ html, body {
 .curriculum {
     width: 18rem;
     margin: 30px;
+    background-color: #A2AD9A;
 }
 
 .ticket {
     width: 10rem;
-    margin: 10px;
+    margin: 20px;
+    padding: 5px;
 }
 
 .exchange {
-    width: 20rem;
     border-color: transparent;
-    margin: 10px;
+    margin: 20px;
+    padding: 20px;
 }
 
 iframe {
@@ -65,6 +70,14 @@ nav {
     background-size: 100%;
 }
 
+#evaluation-header {
+    height: 800px;
+    width: 100%;
+    background-image: url(../images/evaluation\ page\ background.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
 .main-container {
     padding-top: 40px;
     padding-bottom: 50px;
@@ -77,11 +90,12 @@ nav {
 }
 
 #account-header {
-    height: 300px;
+    height: 290px;
     width: 100%;
     background-color: #0d4548;
-    text-align: center;
-    padding: 90px 0;
+    /* text-align: center; */
+    padding: 60px 0;
+    /* padding-right: 1000px; */
     color: white;
 }
 
@@ -90,4 +104,104 @@ nav {
     background-color: #CED2C2;
     margin: 20px;
     padding: 15px;
+}
+
+#curriculum-header {
+    height: 700px;
+    width: 100%;
+    background-color: #0d4548;
+    /* text-align: center; */
+    padding: 26px 0;
+    /* padding-right: 1000px; */
+    color: white;
+}
+
+#curriculum-content {
+    padding-top: 70px;
+}
+
+#plan-visit-header {
+    height: 290px;
+    width: 100%;
+    background-color: #0d4548;
+    /* text-align: center; */
+    padding: 60px 0;
+    /* padding-right: 1000px; */
+    color: white;
+}
+
+.choice {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .choice input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .choice:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .choice input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .choice input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .choice .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
+
+  #course-container {
+    margin: 70px;
+    margin-bottom: 0;
+  }
+
+  #discover-btn {
+    color: white;
+  }
+
+  #discover-btn:hover, #discover-btn:focus, #discover-btn:active, #discover-btn.active {
+    color: #A2AD9A;
 }
