--- a/leeds_virtual_museums/templates/base.html
+++ b/leeds_virtual_museums/templates/base.html
@@ -19,7 +19,7 @@
 
     <body>
     {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="font-family: serif; font-size: 130%;">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="/">Leeds Virtual Museum</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
