--- a/leeds_virtual_museums/templates/course.html
+++ b/leeds_virtual_museums/templates/course.html
@@ -1,26 +1,34 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container main-container">
+<div class="main-container" id="course-container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10"><h1>{{ header }}</h1></div>
+    </div>
+    
     <div class="row" id="course">
-        <div class="col-2">
-            <h5>{{ course_name }}</h5>
+        <div class="col-2" style="padding-top: 20px;">
+            <h3>{{ course_name }}</h3>
             {% for section in category %}
-            <a href="/course?course={{ course_number }}&section={{ forloop.counter0 }}">{{ section }}</a>
+            <a href="/course?course={{ course_number }}&section={{ forloop.counter0 }}" style="color: #0d4548;">{{ section }}</a>
             <br>
             {% endfor %}
-            <a href="/course_question?course={{ course_number }}">Quiz</a>
+            <a href="/course_question?course={{ course_number }}" style="color: #0d4548; font-size: 30px;">Quiz</a>
         </div>
     
     
         <div class="col-10">
-            <h1>{{ header }}</h1>
-            <iframe id="course_content" src="{{link}}" width="110%" height="700px"></iframe>
+            <br>
+            <p>
+                The content is from: {{ link }}
+            </p>
+            <iframe id="course_content" src="{{link}}" width="100%" height="700px"></iframe>
         </div>
     </div>    
 </div>
 
 <script>
-    document.getElementById("course_content").height = "1000";
+    document.getElementById("course_content").height = "900";
 </script>
 {% endblock %}
