--- a/leeds_virtual_museums/templates/login.html
+++ b/leeds_virtual_museums/templates/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="container main-container">
+<div class="container main-container text-center" style="padding-top: 100px;">
     <h1>Login</h1>
 
     <p>
